src/index.scss
/* ... */
#celeb {
    margin-left: 10px;

}
#keyboard {
    background-repeat: no-repeat;
    width: 800px;
    height: 275px;
    background-size: 800px, 308px;
    opacity: 100%;
    border: none;
    display: flex;
    position: absolute;    


}

#monitor {
    background-repeat: no-repeat;
    width: 680px;
    height: 720px;
    background-size: 670px,  650px;
    opacity: 100%;
    background-image :url(../images/Computer.png);
    border: none;

}

#inner-monitor {
    margin-left: 90px;
    margin-top: 40px;
    width: 420px;
    height: 330px;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-evenly;

}


#modal-wrapper{
    display: none;
    position: absolute;
    margin-left: -3px;
    width: 420px;
    height: 324px;
    background-color: rgba(169, 169, 169, 0.85);
    z-index: 1;
    border-radius: 25px;
}

#modal{
    display: none;
    width: 280px;
    height: fit-content;
    background-color: white;
    opacity: 100;
    border: black 1px solid;
    margin-left: 50px;
    margin-top: 100px;
    font-size: 13px;
    font-family: Arial;
    padding: 10px 17px 10px;
}

#text-box{
    height: 250px;
    width: 380px;
    background-image: url(../images/window.png);
    border: solid black 1px;
    margin-top: 20px;
#clippy{
    position: absolute;
    height: 100px;
    width: 100px;
    margin-left: 200px;
    margin-top: 50px;
}
    
}
#entry-box {
    height: 20px;
    width: 140px;
    margin-top: 00px;
 
}

#instructions{
    display: none;
}

#submit {
 width: 120px;
}

#getSloth {
    height: 30px;
    width: 370px;
    display: flex; 
    justify-content: space-between;
    align-items: center;
}


ul {
    margin-top: 10px;
    margin-left: 7px;
}

#youEntered {
    margin-left: 10px;
}

#otherSloths {
    margin-left: 10px;
}
#slHeader {
    padding-left: 10px;
   

}

#youEntered {
    font-size:20px;
    font-family: 'chicago';
    margin-top: 10px;
}

.sloth-list li:hover {
    cursor: pointer;
}

#otherSloths{
    font-family:'chicago';
    font-size: 14px;
}

#slothItem{
    font-family:'chicago'
}

#intro-box{
    margin-left: 10px;
    font-family:'chicago';
    margin-right: 10px;
    margin-top: 15px;
}

#danceSloth{
    height: 120px;
    width: 120px;
    margin-left: 20px;
    margin-top: 10px
}
.intro{ 
    font-family:'chicago';
    font-size: 5px;
}

.introText{
    font-size: 12px;
}

// #clippy{
//     background-image: url(../images/clippy.gif);
//     width: 100px;
//     height: 100px;
//     position: absolute;
//     background-size: 100px, 100px;
//     margin-left: 280px;
//     margin-top: 0px;
    
// }

.introTextExample{
    font-size: 16px;
    color: red;
}

.introTextExample2{
    font-size: 16px;
    color: blue;
}

#yourWord {
    font-size: 16px;
    color: red;
}
.brk{
    color: white;   
}
.brk2{
    color: white;
}

#list-box{
    display: flex;
    justify-content: space-evenly;

}

.leftHand{
    width: 280px;
    height: 385px;
    background-repeat: no-repeat;
    position: absolute;
    padding-left: 70px;
    padding-top: 100px;
    background-size: 250px 385px;
    border: none;
   
}


#q_topper {
    margin-left: 85px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#w_topper {
    margin-left: 135px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#e_topper {
    margin-left: 185px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}
#r_topper {
    margin-left: 238px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}
#t_topper {
    margin-left:288px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}
#y_topper {
    margin-left:340px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}
#u_topper {
    margin-left:390px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}
#i_topper {
    margin-left:443px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#o_topper {
    margin-left:493px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#p_topper {
    margin-left:545px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#leftBrac_topper {
    margin-left:595px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#rightBrac_topper {
    margin-left:647px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}
#a_topper {
    margin-left: 100px;
    margin-top: 115px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#s_topper {
    margin-left: 151px;
    margin-top: 115px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#d_topper {
    margin-left: 202px;
    margin-top: 115px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#f_topper {
    margin-left: 253px;
    margin-top: 115px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}

#g_topper {
    margin-left: 304px;
    margin-top: 115px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}
/* ... */

